--- a/public/css/app.css
+++ b/public/css/app.css
@@ -265,6 +265,9 @@ table thead th{
   body{
     overflow: scroll;
   }
+  .m-dis{
+    display: none;
+  }
   .form-container{
     margin-top: -2px;
   }
@@ -346,6 +349,10 @@ table thead th{
     text-align: center;
     margin-left: 35%;
     margin-right: 35%;
+    z-index: 4;
+  }
+  .login-box{
+    margin: 1rem;
   }
   .link-box{
     max-width: 100vw;
@@ -388,6 +395,10 @@ table thead th{
   margin-top: 25%;
   margin-bottom: 25%;
   color: black;
+}
+
+.login-box input{
+  font-size: 1.5vh;
 }
 
 .login-box-caption{
