--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,10 +3,10 @@
 <div class="login-wrapper">
   <div class="hero">
     <div class="row">
-      <div class="col-2">
+      <div class="col-2 m-dis">
 
       </div>
-      <div class="col-8">
+      <div class="col-lg-8 col-sm-12">
         <div class="login-box">
           <center class="login-box-caption">Login</center>
           <div class="row">
@@ -30,7 +30,7 @@
           </div>
         </div>
       </div>
-      <div class="col-2">
+      <div class="col-2 m-dis">
 
       </div>
     </div>
