--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
       <div class="col-2">
 
       </div>
-      <div class="col-8">
+      <div class="col-lg-8 col-sm-12">
         <div class="login-box">
           <center class="login-box-caption">Login</center>
           <div class="row">
