--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -50,8 +50,8 @@
             </div>
             <div class="col-sm-12 col-lg-4">
              <div class="supporting-links">
-               <div class="link-box" onclick="window.location.href = '/vulnerability';">
-                 How vulnerable am I?
+               <div class="link-box" onclick="window.location.href = 'http://bit.ly/2WylPf9';">
+                 How Vulnerable am I?
                </div>
              </div>
             </div>
