--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -95,4 +95,18 @@
   </div>
 </div>
 
-<%- include("footer") %>
+<!-- Footer -->
+<footer class="page-footer font-small blue pt-4">
+   <!-- Copyright -->
+   <div class="footer-copyright text-center py-3">Made with <i class="fa fa-heart" style="color:red;"></i> by Parardha & Prajneya
+   </div>
+   <!-- Copyright -->
+</footer>
+<!-- Footer -->
+</body>
+
+<script src="/js/counter.js"></script>
+<script src="/js/emergency.js"></script>
+<script src="/js/vulnerable.js"></script>
+<script src="/js/misc.js"></script>
+</html>
