Update meta tags

--- a/views/corona.ejs
+++ b/views/corona.ejs
@@ -71,7 +71,7 @@
             <p></p>
             If you develop a fever, cough, and have difficulty breathing, promptly seek medical care. Call in advance and tell your health provider of any recent travel or recent contact with travelers.
           </div>
-          <div class="help-button">
+          <div class="help-button" onclick="window.location.href = 'https://www.mygov.in/covid-19/';">
             Learn More
           </div>
         </div>
