--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,10 +4,14 @@
     <meta charset="utf-8">
     <!-- <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1' /> -->
     <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=1' />
+    <meta property="og:title" content="India Fights Corona | Covid-19 HelpBoard" />
+    <meta property="og:url" content="https://indiafightscorona.herokuapp.com/" />
+    <meta property="og:type" content="WebApp" />
+    <meta property="og:description" content="This system is placed to serve as a unified platform for NGOs throughout India to collaborate during COVID-19 crisis." />
+    <meta property="og:image" content="../screens/home.png" />
     <title>COVID-19 Helpboard</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="/css/app.css">
     <script src="https://kit.fontawesome.com/8a321c0242.js" crossorigin="anonymous"></script>
 
   </head>
-  
