--- a/views/404.ejs
+++ b/views/404.ejs
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Cabin:400,700" rel="stylesheet">
 
 	<!-- Custom stlylesheet -->
-	<link type="text/css" rel="stylesheet" href="css/404.css">
+	<link type="text/css" rel="stylesheet" href="/css/404.css">
 
 </head>
 
