Add FAQ Section

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -12,6 +12,7 @@
     <div class="row">
       <div class="col-12">
         <div class="login" onclick="window.location.href='login'">Login</div>
+        <div class="faq" onclick="window.location.href='https://www.mohfw.gov.in/pdf/FAQ.pdf'">FAQ</div>
       </div>
     </div>
     <div class="row">
@@ -52,6 +53,13 @@
              <div class="supporting-links">
                <div class="link-box" onclick="window.location.href = 'http://bit.ly/2WylPf9';">
                  How Vulnerable am I?
+               </div>
+             </div>
+            </div>
+            <div class="col-sm-12 mobile-only">
+             <div class="supporting-links">
+               <div class="link-box" onclick="window.open('https://www.mohfw.gov.in/pdf/FAQ.pdf', '_blank')">
+                 FAQ
                </div>
              </div>
             </div>
