--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,7 +31,25 @@ body{
   margin-top: 1.5rem;
 }
 
+.mobile-only{
+  display: none;
+}
+
 .login{
+  display: inline;
+  font-size: 2vh;
+  margin-top: 0.5rem;
+  margin-right: 1rem;
+  float: right;
+  border-style: solid;
+  border-color: white;
+  padding: 0rem 1rem;
+  border-width: 2px;
+  border-radius: 5px;
+}
+
+.faq{
+  display: inline;
   font-size: 2vh;
   margin-top: 0.5rem;
   margin-right: 1rem;
@@ -44,6 +62,11 @@ body{
 }
 
 .login:hover{
+  background: green;
+  cursor: pointer;
+}
+
+.faq:hover{
   background: green;
   cursor: pointer;
 }
@@ -265,6 +288,9 @@ table thead th{
   body{
     overflow: scroll;
   }
+  .mobile-only{
+    display: block;
+  }
   .form-container{
     margin-top: -2px;
   }
@@ -347,6 +373,9 @@ table thead th{
     margin-left: 35%;
     margin-right: 35%;
     z-index: 4;
+  }
+  .faq{
+    display: none;
   }
   .login-box{
     margin: 1rem;
