--- a/views/new.ejs
+++ b/views/new.ejs
@@ -15,11 +15,11 @@
                 <div class="form-box">
                   <form action="/sos" method="POST">
                     <label for="pin">Pincode</label>
-                    <input type="text" name="pincode" class="form-control form-control-lg" id="pin" onkeypress="retrieveState()" onkeyup="retrieveState()" placeholder="Enter your Address Pincode" required>
+                    <input type="text" name="pincode" class="form-control form-control-lg" id="pin" onkeypress="retrieveState()" onkeyup="retrieveState()" placeholder="Pincode" required>
                     <label for="name">Name</label>
-                    <input type="text" name="name" class="form-control form-control-lg" id="name" placeholder="Enter your full name" required>
+                    <input type="text" name="name" class="form-control form-control-lg" id="name" placeholder="Full Name" required>
                     <label for="address">Address</label>
-                    <input type="text" name="address" class="form-control form-control-lg" id="address" placeholder="Enter your Address" required>
+                    <input type="text" name="address" class="form-control form-control-lg" id="address" placeholder="Address" required>
                     <label for="contactno">Contact Number</label>
                     <input type="text" name="contact" class="form-control form-control-lg" id="contactno" placeholder="10 Digit Phone Number" required>
                     <label for="requirement">Requirement</label> <br>
