Fix Footer Height

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,5 @@
     <!-- Footer -->
-    <footer class="page-footer font-small blue pt-4">
+    <footer class="page-footer font-small blue">
        <!-- Copyright -->
        <div class="footer-copyright text-center py-3">Made with <i class="fa fa-heart" style="color:red;"></i> in India
        </div>
