--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,7 +16,6 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #464646;
-  margin-bottom: 1rem;
 }
 
 .about-wrapper{
@@ -26,7 +25,6 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #464646;
-  margin-bottom: 1rem;
 }
 
 .hero{
@@ -157,7 +155,7 @@ body{
 .source-text{
   font-size: 2.3vh   !important;
   text-align: center;
-  margin-bottom: 2rem;
+  padding-bottom: 2rem;
 }
 
 .get-started{
