--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -127,7 +127,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="page-footer font-small blue pt-4">
+<footer class="page-footer font-small blue">
    <!-- Copyright -->
    <div class="footer-copyright text-center py-3">Made with <i class="fa fa-heart" style="color:red;"></i> by Parardha & Prajneya
    </div>
