Add Footer Link

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -129,7 +129,7 @@
 <!-- Footer -->
 <footer class="page-footer font-small blue">
    <!-- Copyright -->
-   <div class="footer-copyright text-center py-3">Made with <i class="fa fa-heart" style="color:red;"></i> by Parardha & Prajneya
+   <div class="footer-copyright text-center py-3">Made with <i class="fa fa-heart" style="color:red;"></i> by <a href="https://www.linkedin.com/in/parardha/">Parardha</a> & <a href="https://www.linkedin.com/in/prajneyakumar/">Prajneya</a>
    </div>
    <!-- Copyright -->
 </footer>
