Meta Tag HTTP Update

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,7 +8,7 @@
     <meta property="og:url" content="https://indiafightscorona.herokuapp.com/" />
     <meta property="og:type" content="WebApp" />
     <meta property="og:description" content="This system is placed to serve as a unified platform for NGOs throughout India to collaborate during COVID-19 crisis." />
-    <meta property="og:image" content="https://i.imgur.com/m7VLh1B.jpg" />
+    <meta property="og:image" content="http://i.imgur.com/m7VLh1B.jpg" />
     <title>COVID-19 Helpboard</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="/css/app.css">
