--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,6 +9,10 @@
     <meta property="og:type" content="WebApp" />
     <meta property="og:description" content="This system is placed to serve as a unified platform for NGOs throughout India to collaborate during COVID-19 crisis." />
     <meta property="og:image" content="http://i.imgur.com/m7VLh1B.jpg" />
+    <meta property="og:image:secure_url" content="https://i.imgur.com/m7VLh1B.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1500" />
+    <meta property="og:image:height" content="1500" />
     <title>COVID-19 Helpboard</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="/css/app.css">
