Update Success Page UI

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -180,7 +180,7 @@ body{
   margin-left: 3rem;
   margin-right: 5rem;
   max-width: 90vw;
-  font-size: 1.5vw;
+  font-size: 2.5vh;
   margin-bottom: 2rem;
   margin-top: 5rem;
   color: black;
