--- a/views/help-on-way.ejs
+++ b/views/help-on-way.ejs
@@ -10,6 +10,9 @@
       </div>
         <h1>Success</h1>
         <p>We received your request and have sent the data to the responsible authorities. <br/> People will be in touch with you shortly! Stay Safe.</p>
+        <div class="home-button">
+          <a href="/">HOME</a>
+        </div>
       </div>
     </body>
 </html>
