--- a/public/css/success.css
+++ b/public/css/success.css
@@ -30,3 +30,9 @@ i {
   display: inline-block;
   margin: 0 auto;
 }
+
+.warning {
+  padding-left: 25%;
+  padding-right: 25%;
+  text-align: left !important;
+}
