--- a/public/css/success.css
+++ b/public/css/success.css
@@ -36,3 +36,23 @@ i {
   padding-right: 25%;
   text-align: left !important;
 }
+
+a {
+  font-family: 'Cabin', sans-serif;
+  display: inline-block;
+  padding: 10px 25px;
+  background-color: #8f8f8f;
+  border: none;
+  border-radius: 40px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+}
+
+a:hover {
+  background-color: #2c2c2c;
+}
