--- a/views/corona.ejs
+++ b/views/corona.ejs
@@ -17,7 +17,7 @@
           <p></p>
             People may experience:
             <ul>
-              <li>Cough</li>
+              <li>Dry Cough</li>
               <li>Fever</li>
               <li>Tiredness</li>
               <li>Difficulty Breathing (severe cases)</li>
