--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -11,7 +11,7 @@
     <!-- NAV SECTION END -->
     <div class="row">
       <div class="col-12">
-        <div class="login" onclick="window.location.href='login'">Login</div>
+        <div class="login" onclick="window.location.href='login'">Want to Help? Login</div>
         <div class="faq" onclick="window.location.href='https://www.mohfw.gov.in/pdf/FAQ.pdf'">FAQ</div>
       </div>
     </div>
@@ -124,20 +124,5 @@
     </div>
   </div>
 
-</div>
 
-<!-- Footer -->
-<footer class="page-footer font-small blue">
-   <!-- Copyright -->
-   <div class="footer-copyright text-center py-3">Made with <i class="fa fa-heart" style="color:red;"></i> by <a href="https://www.linkedin.com/in/parardha/">Parardha</a> & <a href="https://www.linkedin.com/in/prajneyakumar/">Prajneya</a>
-   </div>
-   <!-- Copyright -->
-</footer>
-<!-- Footer -->
-</body>
-
-<script src="/js/counter.js"></script>
-<script src="/js/emergency.js"></script>
-<script src="/js/vulnerable.js"></script>
-<script src="/js/misc.js"></script>
-</html>
+<%- include("footer") %>
