--- a/public/css/app.css
+++ b/public/css/app.css
@@ -90,7 +90,7 @@ body{
   border-width: 2px;
   border-radius: 5px;
   color: black;
-  background: rgba(155, 195, 96);
+  background: #A9A9A9;
 }
 
 .logout:hover{
